# stanse

./: .gitignore  LICENSE.txt  README  README.WIN32  SUCCESS_STORIES  TODO.txt  WISH.txt  build.xml  getarch.cmd  getarch.sh  getlastrevision.sh  stanse.cmd  stanse.dox
fa-desc/: example.xml  locktest.c
nefunkcni_zdrojaky/: pokus.c  struktury_tecka.c  ukazatel_na_funkci.c
src/cppparser/: .gitignore  CMakeLists.txt  ast_dumper.cpp  ast_dumper.hpp  ast_dumper_detail.cpp  ast_dumper_detail.hpp  ast_pretty_printer.cpp  ast_pretty_printer.hpp  cfg.cpp  cfg.hpp  cfg_builder.cpp  cfg_builder.hpp  cfg_dumper.cpp  cfg_dumper.hpp  cfg_json_writer.cpp  cfg_json_writer.hpp  cppparser.sln  cppparser.vcproj  main.cpp  rcfg_dumper.cpp  rcfg_dumper.hpp  unit_navigator.cpp  unit_navigator.hpp  util.cpp  util.hpp  xml_writer.hpp
src/cppparser/test/: agg_init.cfg  agg_init.cpp  array_subscript.cfg  array_subscript.cpp  asm.cfg  asm.cpp  bind_to_constref.cfg  bind_to_constref.cpp  break_cont_dest.cfg  break_cont_dest.cpp  comma.cfg  comma.cpp  construct_init_list.cfg  construct_init_list.cpp  construct_local.cfg  construct_local.cpp  construct_local_dest.cfg  construct_local_dest.cpp  construct_temp.cfg  construct_temp.cpp  construct_temp_dest.cfg  construct_temp_dest.cpp  cxxfunctionalcastexpr.cfg  cxxfunctionalcastexpr.cpp  declstmt_varptr.cfg  declstmt_varptr.cpp  do.cfg  do.cpp  empty.cfg  empty_fun.cfg  enum.cfg  enum.cpp  expr_ret.cfg  expr_ret.cpp  for.cfg  for.cpp  goto.cfg  goto.cpp  if.cfg  if.cpp  (+36 more)
src/cppparser/tools/: cfg2dot.py  cfg2pdf.py  delete_nodes.py  tests2pdf.py
(+852 files in other folders)
